--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+.DS_Store
+Data/.DS_Store
+Data/SpotifyAudioFeaturesApril2019.csv
+Data/SpotifyAudioFeaturesNov2018.csv
+Data/SpotifyTracksDB.csv
